--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+
 body, html {
   margin: 0;
   padding: 0;
   height: 100%;
   background-color: #222326;
   color: #fff;
-}
-
-#root {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  font-family: 'Roboto', sans-serif;
 }
