--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
 
 body, html {
-  margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #222326;
+  background-color: #181818;
   color: #fff;
   font-family: 'Roboto', sans-serif;
+}
+
+p, li {
+  font-weight: 300;
 }
